--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,10 @@
     <string name="changelog_screen_created_at">Created At: %1$s</string>
     <string name="changelog_screen_updated_at">Updated At: %1$s</string>
     <string name="nav_about">About</string>
+    <string name="machine_card_image_blurred">%1$s image blurred</string>
+    <string name="machine_card_image">%1$s image</string>
+    <plurals name="machine_card_players_count">
+        <item quantity="one">%d Player</item>
+        <item quantity="other">%d Players</item>
+    </plurals>
 </resources>
